syntax = "proto3";

option go_package = "github.com/DarkLordOfDeadstiny/DSYS-gRPC-template/proto";

package proto;

// compile command:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative [path to file, ex. proto/template.proto]


// The template service definition.
// you can call it whatever you want
service Template
{
    // one message is sent and one is recieved
    rpc SendRequest (Request) returns (Reply);
}

message Request{
    int32 lamport = 1;
    int32 nodeID = 2;
    string port = 3;
    int32 lamport_req = 4;
}

message Reply{
    string message = 1;
    int32 lamport = 2;
}